--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.example.cofflyz">
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Cofflyz"
-        tools:targetApi="31">
+        android:theme="@style/Theme.Cofflyz">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.login.LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login" />
+        <!-- SplashActivity sebagai Activity pertama -->
+        <activity
+            android:name=".SplashActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="Splash"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity> <!-- Activity untuk onboarding -->
+        <activity
+            android:name=".ActivityOnboarding"
+            android:exported="false"
+            android:label="Onboarding" /> <!-- MainActivity yang dapat dinavigasi dari Onboarding atau bagian lain -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="Main" />
     </application>
 
 </manifest>
