--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/Theme.Cofflyz">
-
-        <!-- SplashActivity sebagai Activity pertama -->
+        <activity
+            android:name=".ui.login.SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login" /> <!-- SplashActivity sebagai Activity pertama -->
         <activity
             android:name=".SplashActivity"
             android:exported="true"
@@ -20,15 +25,17 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- Activity untuk onboarding -->
+        </activity> <!-- Activity untuk onboarding, tidak diekspor karena hanya diakses dari SplashActivity -->
         <activity
-            android:name=".ActivityOnboarding"
+            android:name=".OnboardingActivity"
             android:exported="false"
             android:label="Onboarding" /> <!-- MainActivity yang dapat dinavigasi dari Onboarding atau bagian lain -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="Main" />
+
+
     </application>
 
 </manifest>
