--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,8 @@
 [versions]
 agp = "8.7.0"
 cameraCamera2 = "1.4.0"
+firebaseAuthKtx = "23.6.0"
+firebaseCore = "21.1.1"
 fragmentKtx = "1.6.2"
 kotlin = "1.9.24"
 coreKtx = "1.15.0"
@@ -30,6 +32,8 @@ androidx-navigation-ui-ktx-v251 = { module = "androidx.navigation:navigation-ui-
 androidx-navigation-fragment-ktx-v251 = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigationFragmentKtxVersion" }
 androidx-viewpager2 = { module = "androidx.viewpager2:viewpager2", version.ref = "viewpager2" }
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
+firebase-core = { module = "com.google.firebase:firebase-core", version.ref = "firebaseCore" }
+google-firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx", version.ref = "firebaseAuthKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
